--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@monstrs/mctl-cli": "0.2.92",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "@yarnpkg/pnpify": "^2.4.0",
     "husky": "5.2.0",
     "typescript": "4.2.3"
