--- a/packages/kratos-forms/package.json
+++ b/packages/kratos-forms/package.json
@@ -14,8 +14,11 @@
   "devDependencies": {
     "@monstrs/mctl-cli": "0.2.92",
     "@ory/kratos-client": "0.5.5-alpha.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
