--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -12,5 +12,7 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
+  - path: .yarn/plugins/@monstrs/plugin-essentials.cjs
+    spec: ../tools/yarn/plugin-essentials/dist/@monstrs/plugin-essentials.js
 
 yarnPath: .yarn/releases/yarn-2.4.1.cjs
