feat(common): yarn plugin path

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -12,7 +12,6 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
-  - path: .yarn/plugins/@monstrs/plugin-essentials.cjs
-    spec: ../tools/yarn/plugin-essentials/dist/@monstrs/plugin-essentials.js
+  - .yarn/plugins/@monstrs/plugin-essentials.cjs
 
 yarnPath: .yarn/releases/yarn-2.4.1.cjs
