--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,15 +3,4 @@ packageExtensions:
     dependencies:
       '@monstrs/logger': '*'
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: '@yarnpkg/plugin-version'
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: '@yarnpkg/plugin-typescript'
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: '@yarnpkg/plugin-workspace-tools'
-  - .yarn/plugins/@monstrs/plugin-essentials.cjs
-
-yarnPath: .yarn/releases/yarn-3.1.0-rc.2.cjs
+yarnPath: .yarn/releases/yarn-0.0.1-git.20220123.hash-63358a4c.cjs
