--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "devDependencies": {
     "@jest/core": "^27.4.7",
     "@monstrs/config-jest": "^0.0.10",
-    "@monstrs/schematics": "^0.0.15",
-    "@types/eslint": "^8",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.1",
-    "@types/testing-library__jest-dom": "^5.14.1",
+    "@monstrs/schematics": "^0.0.19",
+    "@types/eslint": "^8.4.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.12",
+    "@types/testing-library__jest-dom": "^5.14.2",
     "eslint": "^8.7.0",
-    "husky": "7.0.2",
-    "typescript": "4.4.3"
+    "husky": "7.0.4",
+    "typescript": "4.5.5"
   },
   "packageManager": "yarn@3.1.1",
   "tools": {
@@ -22,7 +22,7 @@
       "collection": "@monstrs/schematics",
       "schematic": "project",
       "type": "libraries",
-      "migration": 1642934344369
+      "migration": "1643130466400"
     }
   }
 }
