--- a/packages/identity-user-provider/package.json
+++ b/packages/identity-user-provider/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@monstrs/react-user": "workspace:0.1.2",
+    "@ory/client": "*",
     "@types/react": "^17.0.38",
     "react": "^17.0.2"
   },
