feat: update tools

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,5 @@
-pnpEnableEsmLoader: true
-
 enableGlobalCache: false
 
-yarnPath: .yarn/releases/yarn-file.cjs
+pnpEnableEsmLoader: true
 
-httpTimeout: 600000
-httpRetry: 30
+yarnPath: .yarn/releases/yarn-remote.cjs
