feat: update tools

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,11 @@
     "target": "es2021",
     "jsx": "react",
     "outDir": "./dist",
-    "noImplicitOverride": true
+    "noImplicitOverride": true,
+    "skipLibCheck": true
   },
-  "include": ["project.types.d.ts", "packages/**/*"]
+  "include": [
+    "project.types.d.ts",
+    "packages/**/*"
+  ]
 }
