--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,8 +50,5 @@
     "noImplicitOverride": true,
     "skipLibCheck": true
   },
-  "include": [
-    "project.types.d.ts",
-    "packages/**/*"
-  ]
+  "include": ["project.types.d.ts", "packages/**/*"]
 }
